<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gal.agasol.librecon.AboutActivity">

    <!--<WebView-->
        <!--android:id="@+id/about_webview"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/about_header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_name"
            android:id="@+id/tvAppName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/year"
            android:id="@+id/tvYear"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/organized_by"
            android:id="@+id/tvEventOrganiced"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/about_org"
        android:layout_below="@+id/about_header">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ivLogoAgasol"
            android:src="@drawable/agasol"
            android:adjustViewBounds="true"
            android:layout_marginLeft="5dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ivLogoAsolif"
            android:src="@drawable/asolif"
            android:adjustViewBounds="true"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/ivLogoClusterTic"
            android:src="@drawable/clustertic"
            android:adjustViewBounds="true"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:gravity="center"
        android:id="@+id/about_coders"
        android:layout_below="@+id/about_org"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/designed_and_developed_by"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/company2"
            android:id="@+id/tvCompany2"
            android:layout_marginLeft="5dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/about_coders_img"
        android:layout_below="@+id/about_coders">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogoIrontec"
            android:src="@drawable/irontec"
            android:adjustViewBounds="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/about_coders_2015"
        android:layout_below="@+id/about_coders_img"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/modified_by"
            android:id="@+id/tvModBy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/company"
            android:id="@+id/tvCompany"
            android:layout_marginLeft="5dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/about_coders_img_2015"
        android:layout_below="@+id/about_coders_2015"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogoLibrebit"
            android:adjustViewBounds="true"
            android:src="@drawable/librebit" />

    </LinearLayout>

</RelativeLayout>
